# aan

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.github/: CLA.md
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  tray-menu.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  data_move.rs  db.rs  lib.rs  pdf.rs  test_util.rs  tray_window.rs  watcher.rs
src-tauri/src/commands/: annotations.rs  backup.rs  bookmark.rs  chapter.rs  collections.rs  data_folder.rs  dictionary.rs  fonts.rs  import.rs  mod.rs  series.rs  shell.rs  stats.rs  tray.rs  watch.rs
src/app/: Sidebar.svelte  TitleBar.svelte  TrayMenu.svelte
src/features/favorites/: Favorites.svelte
src/features/history/: History.svelte
src/features/home/: CardRow.svelte  ContinuePill.svelte  ContinueRow.svelte  Home.svelte  HomeHero.svelte  QuickChips.svelte  RandomPickModal.svelte  StatsBoard.svelte
src/features/reader/: BookmarksMenu.svelte  BrightnessControls.svelte  MangaReader.svelte  NovelAnnotations.svelte  NovelDictionary.svelte  NovelReader.svelte  NovelSettingsMenu.svelte  Reader.svelte  ReaderSettingsMenu.svelte  ReaderTapZones.svelte  ReaderToolbar.svelte  annotation-range.ts
src/shared/lib/: api.ts  (+13 more)
tests/: README.md  setup.ts
tests/component/: helpers.ts
tests/e2e/: README.md  TEST_FLOWS.md  fixtures-needed.md
tests/fixtures/: README.md  generate.ts  seeds.ts
(+129 files in other folders)
