[package]
name = "aan"
version = "0.1.0"
description = "Aan desktop"
license = "GPL-3.0-only"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.11.1", features = ["unstable", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
parking_lot = "0.12"
pdf-writer = "0.13"
zip = { version = "2", default-features = false, features = ["deflate", "deflate64"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[target.'cfg(windows)'.dependencies]
# Match Tauri 2.11's `windows` version exactly so HWND types are interchangeable.
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }
